# media-mix-modeling

./: .gitignore  01_generate_data.py  02_fit_model.py  02_run_model.py  03_agent.py  03_make_agent.py  04_real_data_example.py  LICENSE  MMM_Agent.md  QUICK_START_DATABRICKS.md  README.md  SESSION_COMPLETE_SUMMARY.md  USAGE_EXAMPLES.md  app.py  example_config.yaml  mmm_stan_data.md  pyproject.toml  requirements.txt
config/agent/: agent_config.yaml
mediamix/: agents.py  datasets.py  generator.py  interactive.py  model.py  nodes.py  optimizers.py  transforms.py
notebooks/: basic_mmm_exploration.ipynb  mmm_exploration.ipynb  questions.jsonl  test_agent.ipynb
src/: __init__.py  agent.py  data_generation.py  data_io.py  datasets.py  environment.py  model.py  optimizer.py  transforms.py
tests/: conftest.py  test_agent.py  test_data_generation.py  test_data_io.py  test_environment.py  test_mlflow_integration.py  test_model.py  test_optimizer.py  test_performance_analysis.py  test_transforms.py
